--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "morgan": "~1.9.0"
+    "knex": "^0.15.0",
+    "morgan": "~1.9.0",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.1"
